# PipeIPC

./: CMakeLists.txt  README.md
Client/: Client.cpp  Client.h  main.cpp
Server/: Server.cpp  Server.h  main.cpp
